@@ -20,6 +20,13 @@
 #######################################################################
 
 
+2014-07-03  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 0.9999999932 released.
+
+        * Updated Makefile.PL for AWS Ubuntu installations.
+
+
 2014-07-01  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 0.9999999931 released.
